--- a/less/uikit/core/variables.less
+++ b/less/uikit/core/variables.less
@@ -39,7 +39,7 @@
 @global-muted-color:                            #f8f8f8;
 @global-text-shadow:                            #fff;
 
-@global-link-color:                             #558efc;
+@global-link-color:                             #006fff;
 @global-link-hover-color:                       lighten(@global-link-color, 5%);
 
 @global-contrast-color:                         #fff;
@@ -61,10 +61,10 @@
 @global-default-hover-background:               #fff;
 @global-default-active-background:              #eee;
 
-@global-primary-background:                     #23b2ff;
-@global-success-background:                     #93d244;
+@global-primary-background:                     #006fff;
+@global-success-background:                     #32d296;
 @global-warning-background:                     #ffc640;
-@global-danger-background:                      #f22342;
+@global-danger-background:                      #f0506e;
 
 //
 // Spacings
