--- a/less/uikit/core/form.less
+++ b/less/uikit/core/form.less
@@ -51,7 +51,7 @@
 @form-background:                               @global-background;
 @form-color:                                    @global-color;
 
-@form-focus-border:                             @button-primary-background;
+@form-focus-border:                             lighten(@button-primary-background, 10%);
 @form-focus-background:                         @global-default-background;
 @form-focus-color:                              @global-color;
 
