--- a/less/uikit/core/toggle.less
+++ b/less/uikit/core/toggle.less
@@ -1,7 +1,7 @@
 @toggle-background-color:                   darken(@global-muted-color, 10%);
-@toggle-active-background-color:            @global-primary-background;
-@toggle-success-active-background-color:    @global-success-background;
-@toggle-danger-active-background-color:     @global-danger-background;
+@toggle-active-background-color:            lighten(@global-primary-background, 15%);
+@toggle-success-active-background-color:    lighten(@global-success-background, 15%);
+@toggle-danger-active-background-color:     lighten(@global-danger-background, 15%);
 @toggle-warning-active-background-color:    @global-warning-background;
 @toggle-active-bg-color-lighten:            25%;
 @toggle-width:                              41px;
