--- a/less/uikit/core/base.less
+++ b/less/uikit/core/base.less
@@ -18,9 +18,9 @@
 @base-body-line-height:                         20px;
 @base-body-color:                               #444;
 
-@base-link-color:                               #07D;
+@base-link-color:                               @global-primary-background;
 @base-link-text-decoration:                     none;
-@base-link-hover-color:                         #059;
+@base-link-hover-color:                         darken(@global-primary-background, 15%);
 @base-link-hover-text-decoration:               none;
 
 @base-code-color:                               #D05;
