--- a/less/uikit/core/nav.less
+++ b/less/uikit/core/nav.less
@@ -68,7 +68,7 @@
 @nav-side-color:                                @global-color;
 @nav-side-hover-background:                     rgba(0,0,0,0.05);
 @nav-side-hover-color:                          @global-color;
-@nav-side-active-background:                    @global-primary-background;
+@nav-side-active-background:                    lighten(@global-primary-background, 8%);
 @nav-side-active-color:                         @global-contrast-color;
 @nav-side-header-color:                         @global-color;
 @nav-side-divider-border:                       @global-border;
