--- a/less/uikit/components/search.less
+++ b/less/uikit/components/search.less
@@ -135,6 +135,7 @@
     -webkit-transition: all linear 0.2s;
     transition: all linear 0.2s;
     vertical-align: middle;
+    text-indent: 24px;
     .hook-search-field;
 }
 
@@ -147,6 +148,12 @@
 .uk-search-field:focus {
     outline: 0;
     .hook-search-field-focus;
+}
+
+.uk-search-icon {
+    position: absolute;
+    pointer-events: none;
+    top: 10px;
 }
 
 /* Dropdown modifier: `uk-dropdown-search`
