--- a/less/uikit/core/dropdown.less
+++ b/less/uikit/core/dropdown.less
@@ -37,7 +37,7 @@
 @dropdown-z-index:                              970;
 @dropdown-width:                                200px;
 @dropdown-margin-top:                           5px;
-@dropdown-padding:                              15px;
+@dropdown-padding:                              0;
 @dropdown-background:                           @global-background;
 @dropdown-color:                                @global-color;
 @dropdown-font-size:                            1rem;
