css size tweaks

--- a/less/uikit/core/modal.less
+++ b/less/uikit/core/modal.less
@@ -40,18 +40,18 @@
 
 @modal-dialog-margin-vertical:                  50px;
 @modal-dialog-padding:                          20px;
-@modal-dialog-width:                            600px;
+@modal-dialog-width:                            450px;
 @modal-dialog-background:                       #fff;
 @modal-dialog-box-shadow:                       0 5px 15px rgba(0,0,0,0.15);
 
-@modal-dialog-large-width:                      930px;
-@modal-dialog-large-width-large:                1130px;
+@modal-dialog-large-width:                      600px;
+@modal-dialog-large-width-large:                930px;
 
 @modal-header-margin-bottom:                    0;
 
-@modal-footer-margin-top:                       15px;
+@modal-footer-margin-top:                       @global-margin;
 
-@modal-caption-margin-bottom:                   -10px;
+@modal-caption-margin-bottom:                   -@global-margin-small;
 @modal-caption-color:                           #fff;
 
 
