--- a/less/uikit/core/utility.less
+++ b/less/uikit/core/utility.less
@@ -41,9 +41,9 @@
 
 @utility-height-viewport-min-height:            600px;
 
-@utility-margin:                                15px;
-@utility-margin-small:                          5px;
-@utility-margin-large:                          40px;
+@utility-margin:                                @global-margin;
+@utility-margin-small:                          @global-margin-mini;
+@utility-margin-large:                          @global-margin-large;
 
 @utility-border-rounded:                        5px;
 
