--- a/less/uikit/core/variables.less
+++ b/less/uikit/core/variables.less
@@ -70,19 +70,21 @@
 // Spacings
 //
 
-@global-margin:                                 15px;
-@global-margin-large:                           25px;
-@global-grid-gutter:                            25px;
-@global-grid-gutter-large:                      35px;
+@global-margin-mini:                            4px;
+@global-margin-small:                           8px;
+@global-margin:                                 16px;
+@global-margin-large:                           32px;
+@global-grid-gutter:                            24px;
+@global-grid-gutter-large:                      32px;
 
 //
 // Controls
 //
 
-@global-height:                                 40px;
-@global-height-mini:                            20px;
-@global-height-small:                           25px;
-@global-height-large:                           40px;
+@global-height:                                 32px;
+@global-height-mini:                            16px;
+@global-height-small:                           24px;
+@global-height-large:                           48px;
 
 //
 // Z-index
