--- a/less/uikit/core/utility.less
+++ b/less/uikit/core/utility.less
@@ -311,6 +311,14 @@
 .uk-margin-left { margin-left: @utility-margin !important; }
 .uk-margin-right { margin-right: @utility-margin !important; }
 
+.uk-margin-y {
+    margin-top: @utility-margin !important;
+    margin-bottom: @utility-margin !important;
+}
+.uk-margin-x {
+    margin-left: @utility-margin !important;
+    margin-right: @utility-margin !important;
+}
 
 .uk-margin-large {
     margin-bottom: @utility-margin-large;
@@ -336,6 +344,15 @@
     margin-right: @utility-margin-large !important;
 }
 
+.uk-margin-large-y {
+    margin-top: @utility-margin-large !important;
+    margin-bottom: @utility-margin-large !important;
+}
+.uk-margin-large-x {
+    margin-left: @utility-margin-large !important;
+    margin-right: @utility-margin-large !important;
+}
+
 /*
  * Smaller margins
  */
@@ -348,6 +365,15 @@
 .uk-margin-small-left { margin-left: @utility-margin-small !important; }
 .uk-margin-small-right { margin-right: @utility-margin-small !important; }
 
+.uk-margin-small-y {
+    margin-top: @utility-margin-small !important;
+    margin-bottom: @utility-margin-small !important;
+}
+.uk-margin-small-x {
+    margin-left: @utility-margin-small !important;
+    margin-right: @utility-margin-small !important;
+}
+
 /*
  * Remove margins
  */
@@ -355,6 +381,8 @@
 .uk-margin-remove { margin: 0 !important; }
 .uk-margin-top-remove { margin-top: 0 !important; }
 .uk-margin-bottom-remove { margin-bottom: 0 !important; }
+.uk-margin-left-remove { margin-left: 0 !important; }
+.uk-margin-right-remove { margin-right: 0 !important; }
 
 
 /* Padding
