fix tree hidden bug

--- a/less/uikit/core/utility.less
+++ b/less/uikit/core/utility.less
@@ -505,6 +505,12 @@
     -webkit-overflow-scrolling: touch;
 }
 
+.uk-overflow-xcontainer {
+    overflow-x: auto;
+    overflow-y: hidden;
+    -webkit-overflow-scrolling: touch;
+}
+
 /* Position
  ========================================================================== */
 
