--- a/less/uikit/core/nav.less
+++ b/less/uikit/core/nav.less
@@ -5,7 +5,6 @@
 //
 // Sub-objects:     `uk-nav-header`
 //                  `uk-nav-divider`
-//                  `uk-nav-sub`
 //
 // Modifiers:       `uk-nav-parent-icon`
 //                  `uk-nav-side`
@@ -37,8 +36,8 @@
 // Variables
 // ========================================================================
 
-@nav-padding-vertical:                          10px;
-@nav-padding-horizontal:                        15px;
+@nav-padding-vertical:                          0;
+@nav-padding-horizontal:                        20px;
 
 @nav-header-padding-vertical:                   @nav-padding-vertical;
 @nav-header-padding-horizontal:                 @nav-padding-horizontal;
@@ -50,59 +49,22 @@
 @nav-divider-margin-vertical:                   9px;
 @nav-divider-margin-horizontal:                 @nav-padding-horizontal;
 
-@nav-nested-padding-left:                       15px;
-@nav-nested-padding-vertical:                   2px;
-@nav-nested-padding-horizontal:                 0;
-
-@nav-sub-padding-vertical:                      5px;
-@nav-sub-padding-left:                          @nav-padding-horizontal;
-
-@nav-parent-icon:                               "\f104";
-@nav-parent-open-icon:                          "\f107";
-@nav-parent-icon-width:                         20px;
-@nav-parent-icon-margin-right:                  -10px;
-
-@nav-side-color:                                @global-color;
-@nav-side-hover-background:                     rgba(0,0,0,0.05);
-@nav-side-hover-color:                          @global-color;
-@nav-side-active-background:                    lighten(@global-primary-background, 8%);
-@nav-side-active-color:                         @global-contrast-color;
+@nav-side-color:                                #606266;
+@nav-side-hover-background:                     #ecf5ff;
+@nav-side-hover-color:                          #66b1ff;
+@nav-side-active-background:                    @nav-side-hover-background;
+@nav-side-active-color:                         @nav-side-hover-color;
 @nav-side-header-color:                         @global-color;
 @nav-side-divider-border:                       @global-border;
 @nav-side-divider-border-width:                 1px;
-@nav-side-nested-color:                         @global-link-color;
-@nav-side-nested-hover-color:                   @global-link-hover-color;
 
-@nav-dropdown-color:                            @global-color;
-@nav-dropdown-hover-background:                 rgba(0,0,0,0.05);
-@nav-dropdown-hover-color:                      @global-color;
+@nav-dropdown-color:                            @nav-side-color;
+@nav-dropdown-hover-background:                 @nav-side-hover-background;
+@nav-dropdown-hover-color:                      @nav-side-hover-color;
 @nav-dropdown-header-color:                     #999;
 @nav-dropdown-divider-border:                   @global-border;
 @nav-dropdown-divider-border-width:             1px;
-@nav-dropdown-nested-color:                     @global-link-color;
-@nav-dropdown-nested-hover-color:               @global-link-hover-color;
-
-@nav-navbar-color:                              @global-color;
-@nav-navbar-hover-background:                   @global-primary-background;
-@nav-navbar-hover-color:                        @global-contrast-color;
-@nav-navbar-header-color:                       #999;
-@nav-navbar-divider-border:                     @global-border;
-@nav-navbar-divider-border-width:               1px;
-@nav-navbar-nested-color:                       @global-link-color;
-@nav-navbar-nested-hover-color:                 @global-link-hover-color;
-
-@nav-offcanvas-padding-vertical:                10px;
-@nav-offcanvas-padding-horizontal:              15px;
-@nav-offcanvas-color:                           #ccc;
-@nav-offcanvas-hover-background:                #404040;
-@nav-offcanvas-hover-color:                     #fff;
-@nav-offcanvas-active-background:               #1a1a1a;
-@nav-offcanvas-active-color:                    #fff;
-@nav-offcanvas-header-color:                    #777;
-@nav-offcanvas-divider-border:                  #1a1a1a;
-@nav-offcanvas-divider-border-width:            1px;
-@nav-offcanvas-nested-color:                    #ccc;
-@nav-offcanvas-nested-hover-color:              #fff;
+@nav-dropdown-line-height:                      36px;
 
 
 /* ========================================================================
@@ -120,22 +82,17 @@
  * Items
  */
 
-.uk-nav li > a {
+.uk-nav > li > a {
     display: block;
     text-decoration: none;
+    padding: @nav-padding-vertical @nav-padding-horizontal;
 }
 
-.uk-nav > li > a { padding: @nav-padding-vertical @nav-padding-horizontal; }
 
-/*
- * Nested items
- */
-
-.uk-nav ul {
-    padding-left: @nav-nested-padding-left;
+.uk-nav > li > a[disabled] {
+    opacity: 0.5;
+    pointer-events: none;
 }
-
-.uk-nav ul a { padding: @nav-nested-padding-vertical @nav-nested-padding-horizontal; }
 
 
 /* Sub-object: `uk-nav-header`
@@ -159,35 +116,6 @@
     margin: @nav-divider-margin-vertical @nav-divider-margin-horizontal;
     .hook-nav-divider;
 }
-
-
-/* Sub-object: `uk-nav-sub`
- ========================================================================== */
-
-/*
- * `ul` needed for higher specificity to override padding
- */
-
-ul.uk-nav-sub {
-    padding: @nav-sub-padding-vertical 0 @nav-sub-padding-vertical @nav-sub-padding-left;
-    .hook-nav-sub;
-}
-
-
-/* Modifier: `uk-nav-parent-icon`
- ========================================================================== */
-
-.uk-nav-parent-icon > .uk-parent > a:after {
-    content: @nav-parent-icon;
-    width: @nav-parent-icon-width;
-    margin-right: @nav-parent-icon-margin-right;
-    float: right;
-    font-family: FontAwesome;
-    text-align: center;
-    .hook-nav-parent-icon;
-}
-
-.uk-nav-parent-icon > .uk-parent.uk-open > a:after { content: @nav-parent-open-icon; }
 
 
 /* Modifier `uk-nav-side`
@@ -242,13 +170,6 @@ ul.uk-nav-sub {
     .hook-nav-side-divider;
 }
 
-/*
- * Nested items
- */
-
-.uk-nav-side ul a { color: @nav-side-nested-color; }
-.uk-nav-side ul a:hover { color: @nav-side-nested-hover-color; }
-
 
 /* Modifier `uk-nav-dropdown`
  ========================================================================== */
@@ -295,143 +216,12 @@ ul.uk-nav-sub {
     .hook-nav-dropdown-divider;
 }
 
-/*
- * Nested items
- */
-
-.uk-nav-dropdown ul a { color: @nav-dropdown-nested-color; }
-.uk-nav-dropdown ul a:hover { color: @nav-dropdown-nested-hover-color; }
-
-
-/* Modifier `uk-nav-navbar`
- ========================================================================== */
-
-/*
- * Items
- */
-
-.uk-nav-navbar > li > a {
-    color: @nav-navbar-color;
-    .hook-nav-navbar;
-}
-
-/*
- * Hover
- * 1. Apply hover style also to focus state
- * 2. Remove default focus style
- */
-
-.uk-nav-navbar > li > a:hover,
-.uk-nav-navbar > li > a:focus { // 1
-    background: @nav-navbar-hover-background;
-    color: @nav-navbar-hover-color;
-    /* 2 */
-    outline: none;
-    .hook-nav-navbar-hover;
-}
-
-/*
- * Sub-object: `uk-nav-header`
- */
-
-.uk-nav-navbar .uk-nav-header {
-    color: @nav-navbar-header-color;
-    .hook-nav-navbar-header;
-}
-
-/*
- * Sub-object: `uk-nav-divider`
- */
-
-.uk-nav-navbar .uk-nav-divider {
-    border-top: @nav-navbar-divider-border-width solid @nav-navbar-divider-border;
-    .hook-nav-navbar-divider;
-}
-
-/*
- * Nested items
- */
-
-.uk-nav-navbar ul a { color: @nav-navbar-nested-color; }
-.uk-nav-navbar ul a:hover { color: @nav-navbar-nested-hover-color; }
-
-
-/* Modifier `uk-nav-offcanvas`
- ========================================================================== */
-
-/*
- * Items
- */
-
-.uk-nav-offcanvas > li > a {
-    color: @nav-offcanvas-color;
-    padding: @nav-offcanvas-padding-vertical @nav-offcanvas-padding-horizontal;
-    .hook-nav-offcanvas;
-}
-
-/*
- * Hover
- * No hover on touch devices because it behaves buggy in fixed offcanvas
- * 1. Apply hover style also to focus state
- * 2. Remove default focus style
- */
-
-.uk-nav-offcanvas > .uk-open > a,
-html:not(.uk-touch) .uk-nav-offcanvas > li > a:hover,
-html:not(.uk-touch) .uk-nav-offcanvas > li > a:focus { // 1
-    background: @nav-offcanvas-hover-background;
-    color: @nav-offcanvas-hover-color;
-    /* 2 */
-    outline: none;
-    .hook-nav-offcanvas-hover;
-}
-
-/*
- * Active
- * `html .uk-nav` needed for higher specificity to override hover
- */
-html .uk-nav.uk-nav-offcanvas > li.uk-active > a {
-    background: @nav-offcanvas-active-background;
-    color: @nav-offcanvas-active-color;
-    .hook-nav-offcanvas-active;
-}
-
-/*
- * Sub-object: `uk-nav-header`
- */
-
-.uk-nav-offcanvas .uk-nav-header {
-    color: @nav-offcanvas-header-color;
-    .hook-nav-offcanvas-header;
-}
-
-/*
- * Sub-object: `uk-nav-divider`
- */
-
-.uk-nav-offcanvas .uk-nav-divider {
-    border-top: @nav-offcanvas-divider-border-width solid @nav-offcanvas-divider-border;
-    .hook-nav-offcanvas-divider;
-}
-
-/*
- * Nested items
- * No hover on touch devices because it behaves buggy in fixed offcanvas
- */
-
-.uk-nav-offcanvas ul a { color: @nav-offcanvas-nested-color; }
-html:not(.uk-touch) .uk-nav-offcanvas ul a:hover { color: @nav-offcanvas-nested-hover-color; }
-
 
 // Hooks
 // ========================================================================
 
-.hook-nav-misc;
-
 .hook-nav-header() {}
 .hook-nav-divider() {}
-.hook-nav-sub() {}
-.hook-nav-parent-icon() {}
 
 .hook-nav-side() {}
 .hook-nav-side-hover() {}
@@ -439,20 +229,9 @@ html:not(.uk-touch) .uk-nav-offcanvas ul a:hover { color: @nav-offcanvas-nested-
 .hook-nav-side-header() {}
 .hook-nav-side-divider() {}
 
-.hook-nav-dropdown() {}
+.hook-nav-dropdown() {
+    line-height: @nav-dropdown-line-height;
+}
 .hook-nav-dropdown-hover() {}
 .hook-nav-dropdown-header() {}
 .hook-nav-dropdown-divider() {}
-
-.hook-nav-navbar() {}
-.hook-nav-navbar-hover() {}
-.hook-nav-navbar-header() {}
-.hook-nav-navbar-divider() {}
-
-.hook-nav-offcanvas() {}
-.hook-nav-offcanvas-hover() {}
-.hook-nav-offcanvas-active() {}
-.hook-nav-offcanvas-header() {}
-.hook-nav-offcanvas-divider() {}
-
-.hook-nav-misc() {}
