--- a/less/uikit/core/variables.less
+++ b/less/uikit/core/variables.less
@@ -35,12 +35,12 @@
 // Text
 //
 
-@global-color:                                  #555;
+@global-color:                                  #303133;
 @global-muted-color:                            #f8f8f8;
 @global-text-shadow:                            #fff;
 
-@global-link-color:                             #006fff;
-@global-link-hover-color:                       lighten(@global-link-color, 5%);
+@global-link-color:                             #303133;
+@global-link-hover-color:                       #409eff;
 
 @global-contrast-color:                         #fff;
 @global-contrast-text-shadow:                   rgba(0,0,0,0.1);
@@ -53,15 +53,14 @@
 //
 
 @global-background:                             #fff;
-@global-border:                                 #e5e5e5;
-
+@global-border:                                 #ebeef5;
 @global-border-radius:                          4px;
 
 @global-default-background:                     #fff;
 @global-default-hover-background:               #fff;
 @global-default-active-background:              #eee;
 
-@global-primary-background:                     #006fff;
+@global-primary-background:                     #409eff;
 @global-success-background:                     #32d296;
 @global-warning-background:                     #ffc640;
 @global-danger-background:                      #f0506e;
